# kaguya

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Jenkinsfile  Lua-CMakeLists.txt  README.md  appveyor.yml  codecov.yml  kaguya.hpp  some_lua_version_test.sh  test_runner.py
.github/workflows/: cmake.yml  test.yml
benchmark/: benchmark.cpp  benchmark_function.cpp  benchmark_function.hpp
cmake/: FindLua.cmake
docs/: Makefile  conf.py  index.rst  make.bat
docs/api_reference/: index.rst  lua_function.rst  lua_ref.rst  lua_table.rst  lua_thread.rst  lua_userdata.rst  luaref.rst  metatable.rst  preprocessor_option.rst  standard.rst  state.rst
docs/getting_started/: class_bindings.rst  index.rst  requirements.rst  tutorial.rst
docs/introduction/: index.rst
examples/: CMakeLists.txt  hello_lua_module.bat  hello_lua_module.cpp  hello_lua_module.sh  hello_lua_module_exec.lua  hello_lua_module_experimental.bat  hello_lua_module_experimental.cpp  hello_lua_module_experimental.sh  hello_world.cpp  lua_exec.cpp
include/kaguya/: .travis.yml  another_binding_api.hpp  call_resume_implements.inl  compatibility.hpp  config.hpp  delegate_to_luaref.inl  deprecated_metatable.hpp  deprecated_native_function.hpp  error_handler.hpp  evaluator.hpp  exception.hpp  function_tuple_def.hpp  kaguya.hpp  lua_ref.hpp  lua_ref_function.hpp  lua_ref_table.hpp  metatable.hpp  native_function.hpp  native_function_cxx03.hpp  native_function_cxx11.hpp  object.hpp  optional.hpp  preprocess.hpp  preprocess_repeate.hpp  push_any.hpp  push_tuple.hpp  ref_tuple.hpp  selector.hpp  state.hpp  traits.hpp  type.hpp  utility.hpp  utility_cxx03.hpp  utility_cxx11.hpp  utils.hpp  variadic_function.hpp
include/kaguya/detail/: lua_function_def.hpp  lua_ref_impl.hpp  lua_table_def.hpp  lua_variant_def.hpp
samples/glfw_nanovg_bind/: CMakeLists.txt  easing.hpp  easing_sample.lua  luaeasing.cpp  luaglfw.cpp  luananovg.cpp  luananovgsample.lua  luananovgsample_oo.lua  u8u32.hpp
samples/moduleSDL2bind/: CMakeLists.txt  sdlbind.cpp  sdlbind.lua
test/: CMakeLists.txt  benchmark.cpp  benchmark_function.cpp  benchmark_function.hpp  link.cpp  link2.cpp  test.cpp  test_01_primitive.cpp  test_02_classreg.cpp  test_03_function.cpp  test_04_lua_function.cpp  test_05_lua_ref.cpp  test_06_state.cpp  test_07_any_type_test.cpp  test_07_vector_map_to_luatable.cpp  test_08_optional.cpp  test_09_utility.cpp  test_10_loadfile.cpp  test_11_cxx11_feature.cpp  test_12_push_any.cpp  test_13_another_binding_api.cpp  test_14_error_message.cpp  test_20_max_arg_20.cpp  test_99_deprecated_feature.cpp  test_main.cpp  test_util.hpp
test/lua/: runtime_error.lua
test/shared_library_test/: CMakeLists.txt  test_shared_class.hpp  test_shared_class_main.cpp  test_shared_class_reg.cpp  test_shared_class_use.cpp
utils/: Makefile  add_constructor_generator.py  constructor_generator.py  delegate_to_luaref_generator.py  evaluator_function_generator.py  function_generator.py  generate_one_header.py  generate_preprocess_macro.py  luaref_function_call_def_generator.py  luaref_function_call_generator.py  luaref_mem_function_call_generator.py  push_tuple_generator.py  ref_tuple_generator.py
